2009-05-20  Ariya Hidayat  <ariya.hidayat@nokia.com>

        Reviewed by Simon Hausmann and Holger Freyther.

        [Qt] Add renderHints property to QWebView.

        * Api/qwebview.cpp:
        (QWebViewPrivate::QWebViewPrivate):
        (QWebView::renderHints):
        (QWebView::setRenderHints):
        (QWebView::setRenderHint):
        (QWebView::paintEvent):
        * Api/qwebview.h:
        * tests/qwebview/qwebview.pro: Added.
        * tests/qwebview/tst_qwebview.cpp: Added.
        (tst_QWebView::tst_QWebView):
        (tst_QWebView::~tst_QWebView):
        (tst_QWebView::init):
        (tst_QWebView::cleanup):
        (tst_QWebView::renderHints):
        * tests/tests.pro:

2009-05-20  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=25834

        Make ChromeClient a interface again

        With recent additions to ChromeClient.h empty defaults were
        added. This is bad for porters as these changes go unnoticed
        and at runtime no notImplemented warning is logged and grepping
        for notImplemented will not show anything. Change this Client
        to be like the other Clients again and always have pure virtuals
        (but for stuff inside #ifdef PLATFORM(MAC)).

        Update the various WebKit/* implementations to compile again.

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::setCursor):
        (WebCore::ChromeClientQt::requestGeolocationPermissionForFrame):
        * WebCoreSupport/ChromeClientQt.h:
        (WebCore::ChromeClientQt::scrollRectIntoView):

2009-05-19  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Simon Hausmann.

        Fix a plugin bug in the WebKit code, similar to the one in WebCore.

        The problem is when a non visible QtPluginWidget would show it self
        in a sibling frame. The problem was due to our clipping. In Qt,